# forecasting_demo

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NICE_TO_HAVE_COMPLETE.md  README.md  docker-compose.yml  download_all_data.py  model_comparison_summary.md  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements-ml.txt  requirements-models.txt  requirements-windows.txt  requirements.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  validate-structure.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
ci/: README.md
ci/docker/: .gitkeep  Dockerfile  docker-compose.yml
ci/github-actions/: cicd-pipeline.yml  validate-structure.yml
ci/scripts/: deploy.ps1  deploy.sh  setup_cicd.py  validate_structure.py
docs/: API_REFERENCE.md  ARCHITECTURE_REFACTOR_COMPLETE.md  BENCHMARK.md  BENCHMARK_RESULTS.md  BENCHMARK_SUMMARY.md  CLEANUP.md  DASHBOARD.md  DASHBOARD_MLFLOW_UPDATE.md  DATASET_STATUS.md  DATA_DOWNLOAD_README.md  DOCKER.md  DOCUMENTATION_INDEX.md  FEATURE_ENGINEERING_CONFIG.md  FEATURE_ENGINEERING_FLOW.md  FINAL_ARCHITECTURE_SUMMARY.md  HYDRA_OPTUNA_QUICK_SETUP.md  KAGGLE_SETUP.md  MLFLOW_INTEGRATION.md  MODEL_CATALOG.md  MODEL_IMPLEMENTATION_SUMMARY.md  MODEL_INVENTORY.md  OPTUNA_GUIDE.md  POETRY_SETUP.md  PROJECT_STRUCTURE.md  PYTORCH_MODELS_ADDED.md  README.md  REQUIREMENTS_SETUP.md  RUN_ENGINE.md  SCHEDULER_INTEGRATION.md  SETUP.md  STYLE_GUIDE.md  conf.py  getting_started.md  index.md
docs/api_reference/: index.md
docs/developer/: adding_model.md  architecture.md  testing_best_practices.md
docs/getting_started/: ten_minute_tour.md
docs/guides/: data_ingestion.md  experiment_tracking.md  model_promotion.md  model_selection.md  testing_strategy.md  troubleshooting.md
docs/status/: CLEANUP_SUMMARY.md  COVERAGE_CONFIG.md  COVERAGE_IMPLEMENTATION_SUMMARY.md  COVERAGE_PLAN.md  MISSION_ACCOMPLISHED.md  MODEL_IMPLEMENTATION_COMPLETE.md  STATE_OF_THE_ART_COMPLETE.md
docs/tutorials/: 01_first_forecast.md
examples/: training_examples.py
projects/inventory_forecasting/: README.md  __init__.py
projects/inventory_forecasting/conf/: config.yaml
projects/inventory_forecasting/scripts/: generate_data.py
projects/retail_sales_walmart/: README.md  __init__.py
projects/retail_sales_walmart/api/: fastapi_app.py
projects/retail_sales_walmart/conf/: config.yaml  walmart_m5_config.yaml
projects/retail_sales_walmart/data/: __init__.py  walmart_dataset.py
projects/retail_sales_walmart/docs/: CLEANUP_SUMMARY.md  HYDRA_USAGE.md  MODULAR_PIPELINE.md  custom_dataset_summary.md
projects/retail_sales_walmart/examples/: walmart_dataset_examples.py
projects/retail_sales_walmart/notebooks/: walmart_data_exploration_training.ipynb  walmart_data_exploration_training_demo.ipynb  walmart_exploratory_analysis.ipynb  walmart_model_training.ipynb
projects/retail_sales_walmart/scripts/: download_data.py  train.py  train_arima.py  train_m5_individual.py  train_m5_models.py
projects/rideshare_demand_ola/: README.md  __init__.py
projects/rideshare_demand_ola/conf/: config.yaml
projects/rideshare_demand_ola/scripts/: generate_data.py
projects/transportation_tsi/: README.md  __init__.py
projects/transportation_tsi/conf/: config.yaml
projects/transportation_tsi/notebooks/: .gitkeep
projects/transportation_tsi/scripts/: download_data.py
results/: best_model_info.json
scripts/: run_benchmark.py
src/ml_portfolio/: __init__.py
tests/: conftest.py  test_data_quality.py
tests/integration/: test_pipeline.py
tests/unit/: test_base_extended.py  test_comprehensive_metrics.py  test_comprehensive_models.py  test_configs.py  test_dataset_factory.py  test_datasets.py  test_ensemble.py  test_loaders.py  test_losses.py  test_metrics.py  test_metrics_extended.py  test_preprocessing.py  test_training_utils.py  test_validation.py
(+184 files in other folders)
