[project]
name = "forecasting-demo"
version = "0.1.0"
description = "ML Portfolio for time series forecasting across multiple domains"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mlflow>=2.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "statsmodels>=0.13.0",
    "optuna>=3.0.0",
    "torch>=1.13.0",
    "pytorch-lightning>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "W", "F", "I"]
